# Dj_market

./: pyproject.toml
market/inventory/: filters.py  forms.py  models.py  signals.py  urls.py  views.py
market/inventory/migrations/: 0001_initial.py  0002_initial.py  0003_product_rate.py  0004_cart_rating.py  0005_remove_product_rate.py
market/inventory/templates/emails/: cart_notification.html
market/inventory/templates/inventory/: add_product.html  cart.html  confirm_delete.html  product_detail.html  products.html
market/market/: settings.py  urls.py
market/templates/: base.html
market/users/: admin.py  forms.py  models.py  urls.py  views.py
market/users/migrations/: 0001_initial.py
market/users/templates/users/: password_change.html  password_change_done.html  profile.html
