[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "psycopg2>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
]
